<resources>
    <string name="app_name">FindApart</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sample_price">$1,500,000,999 VNĐ</string>
    <string name="sample_address">Bến nghế - Quận 1 - Hồ Chí Minh</string>
    <string name="action_add_favourite">Quan tâm</string>
    <string name="action_play_next">Xem chi tiết</string>
    <string name="project_name">SaiGon Apartment</string>
    <string name="title_activity_apartment_detail">ApartmentDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="see_on_map">Xem trên Google Maps</string>
    <string name="decription_header">Mô tả</string>
    <string name="sample_description">Theo mặt bằng căn hộ tầng điển hình của chủ đầu tư cung cấp, căn hộ số 4 có kết cấu giống hệt như căn hộ số 2 cùng tòa nhà T2 khu N01 chung cư Ngoại Giao Đoàn.
        Tuy nhiên, căn số 4 chưng cư Ngoại Giao Đoàn N01 sẽ có được hướng ban công phía Đông vô cùng đẹp hướng ra mặt đường, và nhìn xa hơn sẽ có thể thấy được khu Hồ Tây.
        Diện tích của sảnh ban công này là 6m2 sẽ giúp cả căn hộ đón ánh nắng mặt trời tự nhiên tốt nhất.
        Với những gia chủ thích sự yên tĩnh thì căn hộ số 4 còn được yêu thích vì cách xa khu sảnh chờ thang máy của cả tầng, tạo nên sự kín đáo cho gia đình.</string>
    <string name="register_header">Đăng ký</string>
    <string name="search_by_price">Tìm kiếm theo giá</string>
    <string name="search_by_city">Tìm kiếm theo thành phố</string>
    <string name="search_by_current_location">Địa điểm xung quanh</string>
    <string name="search_by_price_header">Khoảng giá trị bạn cần tìm ?</string>
    <string name="action_share">Chia sẽ</string>
    <string name="search_trending_header">Xu hướng tìm kiếm</string>
    <string name="search_trending_updated_time">(Cập nhật 25/8/2016)</string>
    <string name="seach_trending_content">Xu hướng tìm kiếm không gian sống yên tĩnh, môi trường sống trong lành, thư thái cùng với thiết kế căn hộ có diện tích sử dụng rộng rãi đang là sự lựa chọn hàng đầu cho những cặp vợ chồng trẻ thành đạt. Xu hướng tìm kiếm giá từ 1,000,000,000 đền 1,500,000 đang được nhiều người dùng tìm kiếm.</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Tìm</string>
    <string name="search_hint">Địa điểm tìm kiếm</string>
    <string name="agent_header">Bên cung cấp</string>
    <string name="metro_tower">Metro Tower</string>
    <string name="metro_tower_address">Địa chỉ : Đông Hòa, p. Dĩ An, Di An, Bình Dương</string>
    <string name="metro_tower_phone">Liên hệ : 098 925 36 33</string>
    <string name="title_activity_search_by_city">SearchByCityActivity</string>
    <string name="city_icon">Thành phố</string>
    <string name="back_to_top">Đầu trang</string>
    <string name="reload">Tải lại</string>
    <string name="sample_preview_information">Diện tích 100m2</string>
    <string name="sample_neighbourhood_information">Phía dưới căn hộ có khu mua sắm và siêu thị CircleK mở 24/24. Phía dưới tầng hầm có dịch vụ giữ xe an toàn.</string>
    <string name="sample_nearby_school">Một số trường học gần căn hộ. Cụ thể : Trường ĐH Công nghiệp TP.HCM, Trường ĐH Công nghệ Sài Gòn,Trường ĐH Giao thông Vận tải - cơ sở 2</string>
    <string name="_neighbourhood_information_header">Mua sắm, dịch vụ</string>
    <string name="nearby_school_information_header">Trường học lân cận</string>
    <string name="added_into_favorite_list">Đã thêm vào danh sách yêu thích</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="develop_team_name">Tree House</string>
    <string name="develop_team_major">IT Developing Group</string>
    <string name="develop_team_address">Bến Nghé, Quận 1, Hồ Chí Minh</string>
    <string name="watch_on_youtube">Youtube</string>
    <string name="message">Nhắn tin</string>
    <string name="email">Email</string>
    <string name="about_us_description">Ngày nay, khái niệm \"phòng làm việc\" không còn bị bó hẹp trong một không gian vật lý nữa. Thay vào đó, các môi trường văn phòng truyền thống đang dần được thay thế bằng các văn phòng di động và phân tán. Hệ thống bạn đang sử dụng có đủ linh hoạt và hiệu quả để sẵn sàng thích ứng với những thay đổi này hay không? Những dữ liệu bạn hiện có đã được xử lý tối ưu nhất để mang lại nguồn thông tin hữu ích, tạo ra lợi thế cạnh tranh cho công ty bạn hay chưa? Giải pháp tiên tiến nhất mà bạn không thể bỏ qua đó là phát triển các thiết bị, hệ thống di động. Phòng phát triển ứng dụng di động của QSoft Việt Nam là địa chỉ tin cậy và chất lượng nhất cho bạn. TreeHouse Việt Nam cung cấp các dịch vụ phát triển ứng dụng trên điện thoại với đội ngũ chuyên gia đông đảo, giúp chuyển các công việc ngoại tuyến của bạn sang thế giới di động linh hoạt và năng động. Các lập trình viên của chúng tôi sở hữu kiến thức chuyên sâu về công nghệ di động; thành thạo việc tích hợp trên các ngôn ngữ lập trình và các hệ thống khác nhau.</string>
    <string name="about_us_email">treehouse@gmail.com</string>
    <string name="about_us_phone">+84-1659864449</string>
    <string name="about_us_work_time">8:00 AM - 5:00 PM</string>
    <string name="about_us_header">Cảm ơn bạn đã sử dụng ứng dụng</string>
    <string name="user_name">Tên</string>
    <string name="send">Gửi</string>
    <string name="your_message">Lời nhắn</string>
</resources>
