<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/da_nang_city" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:paddingLeft="16dp"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/textview_search_biy_city_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_price"
                android:textColor="@color/text_black_87"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/textview_seach_by_city_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_address"
                android:layout_below="@+id/textview_search_biy_city_price"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>